--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="headernote container">
       <div class="row">
         <div class="col-sm-12 col-lg-12 animated slideInUp logog">
-          <h1 class="animated slideInLeft slow"><b><a href="https://www.uilin.ml" class="show">uilin</a></b></h1>
+          <h1 class="animated slideInLeft slow"><b><a class="show" href="https://www.uilin.ml" >uilin</a></b></h1>
           <p class="animated slideInLeft slow" style="margin-top:-12.5px">100 days of UI challenge</p>
           </div>
       </div>
@@ -51,7 +51,7 @@
             can get the feedback on your designs. Creating a small community for the UI Designers this
             is because we know that how the designing is going to affect the world in near future. The 
             challenge is simple below is list of challenge accoding to different days. Take the challenge
-            design them upload it on the <a href="https://www.uilin.ml" class="show">uilin.ml</a> and also upload it on your instagram channel, we will
+            design them upload it on the <a class="show" href="https://www.uilin.ml" >uilin.ml</a> and also upload it on your instagram channel, we will
             try to give you feedbacks and will suggest you when to upload on dribbble so that you get
             your shots a score!.
             </p>
@@ -81,7 +81,7 @@
   </div>
   <div class="footer wow animated fadeInUp slow">
     <div class="make">
-      <h1><b><a href="https://www.uilin.ml" class="show">uilin</a></b></h1>
+      <h1><b><a href="https://www.uilin.ml" class="showq">uilin</a></b></h1>
       <p style="margin-top:-15px;font-size: 0.7rem;">100 days of UI challenge</p>
       <br>
       <h1><b>Contact Us</b></h1>
